Close ScanResult in ClassGraph library. (#2042)
GitOrigin-RevId: be98d1d06f7ae625e7006ef878382b07c7666c90